Start adding Windows support. Only serial direct, no J2534 DLL for now, the DLL is 32bit and I am not touching that for now.